asset ui-router

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ default: &default
     database: money
     host: localhost
     pool: 5
-    username: postgres
+    username: john
     password: postgres
 
 
